# PowerNotepad

./: .gitignore  CMakeLists.txt  ChangeLog.txt  README.md  README.txt  README_ja.txt  dialog.cpp  dialog.h  main.cpp  notepad.h  printing.cpp  regex_engine.cpp  regex_engine.h  resource.h  rsrc.rc  settings.cpp  text.cpp
lang/: en_US.rc  ja_JP.rc
